--- a/angular.json
+++ b/angular.json
@@ -46,6 +46,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -95,6 +96,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "todo-list"
 }
